--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --inline --hot",
-    "build": "webpack -p"
+    "dev": "webpack-dev-server --inline --hot --config webpack.config.js",
+    "build": "webpack --progress --hide-modules --config build/webpack.prod.config.js",
+    "test": "karma start build/karma.conf.js"
   },
   "author": "yicj",
   "license": "ISC",
