--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "vue": "^1.0.26"
+    "vue": "^1.0.26",
+    "vuex": "^1.0.0-rc"
   }
 }
